--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,8 +384,9 @@ a {
   width: 100%;
   height: 80vh;
   background-image: url("../img/bg_header.jpg");
-  background-size: 100%;
-  background-attachment: fixed; }
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat; }
   .header .header_background {
     display: -ms-flexbox;
     display: flex;
@@ -502,7 +503,8 @@ a {
     color: #ffffff;
     border-left: 5px solid #ffffff;
     padding-left: 20px;
-    font-size: 34px; }
+    font-size: 34px;
+    margin: 0; }
   .projects .projects_description {
     color: #ffffff;
     margin: 40px 0;
@@ -582,7 +584,8 @@ a {
     color: #262626;
     border-left: 5px solid #262626;
     padding-left: 20px;
-    font-size: 34px; }
+    font-size: 34px;
+    margin: 0; }
   .school .school_description {
     color: #262626;
     margin: 40px 0;
@@ -594,6 +597,9 @@ a {
     display: flex;
     -ms-flex-direction: column;
         flex-direction: column; }
+    .school .school_content .school_content-map {
+      height: 400px;
+      width: 100%; }
     .school .school_content figure, .school .school_content img {
       width: 100%;
       margin: 0; }
@@ -609,7 +615,8 @@ a {
     color: #ffffff;
     border-left: 5px solid #ffffff;
     padding-left: 20px;
-    font-size: 34px; }
+    font-size: 34px;
+    margin: 0; }
   .contact .contact_description {
     color: #ffffff;
     margin: 40px 0;
@@ -676,3 +683,98 @@ a {
   .input.message_contact {
     height: 200px;
     padding: 10px; }
+
+@media only screen and (max-width: 768px) {
+  .projects,
+  .contact .contact_background {
+    padding: 40px 5%; }
+  .projects .projects_description,
+  .school .school_description,
+  .contact .contact_description {
+    margin: 20px 0; }
+  .about {
+    width: 90%;
+    margin: 40px auto 0; }
+  .content {
+    margin: 120px 0; }
+  .about .about_content {
+    -ms-flex-direction: column-reverse;
+        flex-direction: column-reverse;
+    -ms-flex-align: start;
+        align-items: flex-start; }
+  .about .about_content .about_content-photo {
+    margin: 10px 0; }
+  .projects .projects_content .projects_item {
+    height: 350px; }
+  .projects .projects_content .projects_item .project_item-description {
+    margin: 20px; }
+  .school {
+    width: 90%;
+    margin: 40px auto; }
+  .contact .contact_content .contact_content-form {
+    width: 60%; } }
+
+@media only screen and (max-width: 650px) {
+  .projects .projects_content .projects_background {
+    width: 100%; }
+  .projects .projects_content .projects_item .project_item-description {
+    margin: 50px; }
+  .projects .projects_content .projects_background.estacione,
+  .projects .projects_content .projects_background.aerocris,
+  .projects .projects_content .projects_background.myspot,
+  .projects .projects_content .projects_background.browser {
+    margin: 0 0 10px 0; } }
+
+@media only screen and (max-width: 425px) {
+  .about .about_title,
+  .projects .projects_title,
+  .school .school_title,
+  .contact .contact_title {
+    padding-left: 0px;
+    border: none;
+    text-align: center;
+    font-size: 28px; }
+    .about .about_title::after,
+    .projects .projects_title::after,
+    .school .school_title::after,
+    .contact .contact_title::after {
+      content: '';
+      display: block;
+      width: 80px;
+      height: 5px;
+      margin: 10px auto;
+      background-color: currentColor; }
+  .content .content_container h1 {
+    font-size: 40px; }
+  .content .content_container p {
+    margin: 0 40px; }
+  .icons_container li {
+    padding: 10px; }
+  .about .about_content {
+    -ms-flex-align: center;
+        align-items: center; }
+  .projects .projects_content .projects_item .project_item-title {
+    font-size: 20px; }
+  .projects .projects_content .projects_item .project_item-description {
+    margin: 25px; }
+  .school .school_content .school_content-map {
+    height: 150px; }
+  .contact .contact_content .contact_content-form {
+    width: 95%; } }
+
+@media only screen and (max-width: 320px) {
+  .projects,
+  .contact .contact_background {
+    padding: 40px 10%; }
+  .projects .projects_description,
+  .school .school_description,
+  .contact .contact_description {
+    margin: 20px 0; }
+  .about {
+    width: 80%;
+    margin: 40px auto 0; }
+  .school {
+    width: 80%;
+    margin: 40px auto; }
+  .contact .contact_content .contact_content-form {
+    width: 93%; } }
